# ByteCaveClient

./: CMakeLists.txt  chatroomcreation.cpp  chatroomcreation.h  chatroomcreation.ui  createChatroom.ui  hellowindow.cpp  hellowindow.h  hellowindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
interfaces/: IByteCaveClient.h
services/: bytecaveclient.cpp  bytecaveclient.h
structs/: Chatroom.h
